--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -1,17 +1,35 @@
 # Copyright (c) 2020 Ryan Cross
 # SPDX-License-Identifier: MIT
 
-# Uncomment the following line to enable the Sofle OLED Display
-# CONFIG_ZMK_DISPLAY=y
+# Configuration pour les écrans Nice!View
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
 
-# Uncomment these two lines to add support for encoders
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+# Paramètres spécifiques aux écrans Nice!View
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_SIZE=64
+CONFIG_NICE_VIEW_WIDGET_STATUS=y
+CONFIG_SPI=y
+CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_PRIORITY=5
 
-# Uncomment this line below to add rgb underglow / backlight support
+# Support des encodeurs rotatifs
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# Options de gestion d'énergie
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=30000            # 30 secondes avant mise en mode idle
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000    # 30 minutes avant deep sleep
+
+# Optimisations pour la batterie
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y           # Augmentation de la puissance Bluetooth si nécessaire
+
+# Paramètres optionnels
+# CONFIG_ZMK_DISPLAY_INVERT=n            # Décommenter pour inverser les couleurs de l'écran
+
+# Paramètres RGB (actuellement désactivés)
 # CONFIG_ZMK_RGB_UNDERGLOW=y
-
-# Uncomment the line below to disable external power toggling by the underglow.
-# By default toggling the underglow on and off also toggles external power
-# on and off. This also causes the display to turn off.
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
