--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -1,21 +1,23 @@
-# Copyright (c) 2020 Ryan Cross
-# SPDX-License-Identifier: MIT
+# Uncomment the following line to enable deep sleep
+# CONFIG_ZMK_SLEEP=y
 
-# Configuration pour l'écran Sofle
+# Uncomment the following line to increase the keyboard's wireless range
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Enable eager debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
+
+# Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
+# CONFIG_ZMK_USB_LOGGING=y
+
+# Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 
-# Support pour Nice!View
-CONFIG_SPI=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-
-# Support des encodeurs
+# Uncomment to enable encoder
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-# Gestion d'énergie
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000  # 15 minutes avant mise en veille profonde
+# Uncomment the following line if you facing issue on win 11 connection
+# Enables a combination of settings that are planned to be default in future versions of ZMK to improve connection stability. This includes changes to timing on BLE pairing initiation, restores use of the updated/new LLCP implementation, and disables 2M PHY support.
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
